added setup steps

--- a/notebooks/transaction_classification_finetune_2_experiments.ipynb
+++ b/notebooks/transaction_classification_finetune_2_experiments.ipynb
@@ -1,10 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Route 4: Finetuning Modified FinBert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red\">WARNING: it is highly encouraged to use a GPU when running this notebook, otherwise the training is going to take a very long time.</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Dell\\\\Documents\\\\job_search\\\\moneylion\\\\MLS\\\\MoneLionTakeHome_MLScientist_MichelleAdeline\\\\advanced\\\\finBERT_transaction_classification\\\\notebooks'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -15,20 +58,25 @@
     "import logging\n",
     "import sys\n",
     "sys.path.append('..')\n",
+    "sys.path.append('../../..')\n",
     "\n",
     "from textblob import TextBlob\n",
     "from pprint import pprint\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from transformers import AutoModelForSequenceClassification\n",
     "\n",
     "from finbert.finbert import *\n",
     "import finbert.utils as tools\n",
     "from finbert.custom_finbert import CustomFinBert\n",
+    "from src.loading import load_transaction_profiles\n",
+    "from src.preprocessing import preprocess\n",
+    "from src.constants import *\n",
     "\n",
     "project_dir = Path.cwd().parent\n",
-    "pd.set_option('max_colwidth', -1)\n",
+    "pd.set_option('max_colwidth', None)\n",
     "\n",
     "logging.basicConfig(format = '%(asctime)s - %(levelname)s - %(name)s -   %(message)s',\n",
     "                    datefmt = '%m/%d/%Y %H:%M:%S',\n",
@@ -37,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +93,98 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing step: preprocess\n",
+      "Preprocessing step: preprocess_transactions\n",
+      "Preprocessing step: preprocess_merge_categories\n",
+      "Finished preprocessing step: preprocess_merge_categories\n",
+      "Preprocessing step: preprocess_date\n",
+      "Finished preprocessing step: preprocess_date\n",
+      "-> 29649 rows dropped (11.457%)\n",
+      "Finished preprocessing step: preprocess_transactions\n",
+      "Preprocessing step: preprocess_profile\n",
+      "Finished preprocessing step: preprocess_profile\n",
+      "Preprocessing step: preprocess_merge_transfer_profiles\n",
+      "Number of transaction clients who do not have a profile: 0 (0.000%)\n",
+      "Finished preprocessing step: preprocess_merge_transfer_profiles\n",
+      "dropping ('client_id', 'account_id')\n",
+      "Finished preprocessing step: preprocess\n"
+     ]
+    }
+   ],
    "source": [
-    "# ! TODO: PUT THE PREPROCESSING CODE HERE AND STORE PROCESSED DF"
+    "transactions, profiles = load_transaction_profiles(root_path=standard_dir/\"Data\")\n",
+    "data_proc = preprocess(transactions, profiles, drop_uncategorized=True, drop_non_pred_cols=True,\n",
+    "                       get_prev_recurring=True, prev_recurring_one_hot_encode=True, drop_orig_date=True, \n",
+    "                       verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = data_proc[\"category\"]\n",
+    "X = data_proc[[col for col in data_proc.columns if col != \"category\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=SEED, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_cols = [col for col in X.columns if col != \"description\"]\n",
+    "X_train_num = X_train[numeric_cols]\n",
+    "X_test_num = X_test[numeric_cols]\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_train_num)\n",
+    "\n",
+    "X_train_normalized = scaler.transform(X_train_num)\n",
+    "X_test_normalized = scaler.transform(X_test_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = X_train.copy()\n",
+    "train_data[\"category\"] = y_train\n",
+    "train_data[numeric_cols] = X_train_normalized\n",
+    "\n",
+    "test_data = X_test.copy()\n",
+    "test_data[\"category\"] = y_test\n",
+    "test_data[numeric_cols] = X_test_normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.to_csv(standard_dir/\"Data\"/\"train.csv\", index=False)\n",
+    "test_data.to_csv(standard_dir/\"Data\"/\"eval.csv\", index=False)\n",
+    "test_data.to_csv(standard_dir/\"Data\"/\"validation.csv\", index=False)"
    ]
   },
   {
@@ -60,14 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "lm_path = project_dir/'models'/'language_model'/'finbertTRC2'\n",
-    "final_model_dir = project_dir/'models'/'classification_model_lr_1e-4'\n",
-    "data_dir = standard_dir/\"Data\"\n",
-    "# classification_data_path= standard_dir/'Data'/'sentiment_data'"
+    "final_model_dir = project_dir/'models'/'classification_model'\n",
+    "data_dir = standard_dir/\"Data\""
    ]
   },
   {
@@ -79,17 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at /media/student/HDD 2/Michelle/MLS/advanced/finBERT_transaction_classification/models/language_model/finbertTRC2 were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
-      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at /media/student/HDD 2/Michelle/MLS/advanced/finBERT_transaction_classification/models/language_model/finbertTRC2 and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at c:\\Users\\Dell\\Documents\\job_search\\moneylion\\MLS\\MoneLionTakeHome_MLScientist_MichelleAdeline\\advanced\\finBERT_transaction_classification\\models\\language_model\\finbertTRC2 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -108,7 +240,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BertForSequenceClassification(\n",
+       "  (bert): BertModel(\n",
+       "    (embeddings): BertEmbeddings(\n",
+       "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+       "      (position_embeddings): Embedding(512, 768)\n",
+       "      (token_type_embeddings): Embedding(2, 768)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (encoder): BertEncoder(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-11): 12 x BertLayer(\n",
+       "          (attention): BertAttention(\n",
+       "            (self): BertSdpaSelfAttention(\n",
+       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "            (output): BertSelfOutput(\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "              (dropout): Dropout(p=0.1, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (intermediate): BertIntermediate(\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
+       "          )\n",
+       "          (output): BertOutput(\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "            (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (pooler): BertPooler(\n",
+       "      (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (activation): Tanh()\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  (classifier): Linear(in_features=768, out_features=30, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bertmodel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,9 +381,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Dell\\anaconda3\\envs\\MoneyLion\\lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model = finbert.create_the_model()"
    ]
@@ -1392,14 +1597,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open(\"./trained_model_4.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(trained_model, f)"
+    "### Evaluation"
    ]
   },
   {
@@ -1564,13 +1765,6 @@
    "source": [
     "print(classification_report(labels, preds, digits=3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1589,7 +1783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
